vbnc/vbnc/tests/Errors/30311-49.vb
Class Date1
    Public Shared Function Main() As Integer
        Dim a As Single = TimeSpan.FromSeconds(1)
    End Function
End Class